added first page with css styling

--- a/index.html
+++ b/index.html
@@ -4,5 +4,18 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseo</title>
+    <title>Coding Quiz</title>
 </head>
+
+<body>
+    <div class="quiz-box">
+        <h1 class="coding-quiz">Coding Quiz!</h1>
+        <p class="instructions">This quiz will test your knowledge of JavaScript. You will recieve 5 multiple choice questions and answer them within one minute. For every question you get wrong 15 seconds will be
+            taken away from the over all time. High scores can be saved at the end of the quiz to help keep track of progess!</p>
+        <p id="goodluck">💯GOODLUCK!💯</p>
+        <button>Start Quiz</button>
+    </div>
+
+    <script src= "script.js"></script>
+</body>
+</html>
